syntax = "proto3";

package currency;

enum availableCurrencySet {
  PLN = 0;
  EUR = 1;
  USD = 2;
  GBP = 3;
  HUF = 4;
  JPY = 5;

}

service CurrencyService {
  rpc getCurrencyRates(CurrencyRequest) returns (stream CurrencyResponse) {}
}

message CurrencyRequest {
    repeated CurrencyType currencies = 1;
}

message CurrencyResponse {
  repeated Currency currencies = 1;
}

message CurrencyType {
    availableCurrencySet currency = 1;
}

message Currency {
    availableCurrencySet currency = 1;
    double buyRate = 2;
    double sellRate = 3;
}

